syntax = 'proto2';

package atlas;

message BlockMetadataProto {
    required uint32 version = 1;
    required uint64 blockId = 2;
    required uint64 length = 3;
    optional BlockIndexProto index = 4;
}

message BlockIndexProto {
    required uint64 startTimestamp = 1;
    required uint64 endTimestamp = 2;
    repeated string geohashes = 3;
    repeated uint32 startIndices = 4;
    repeated uint32 endIndices = 5;
}

/**
 * datanode communication messages
 */
message GetStoragePolicyRequestProto {
    required uint32 id = 1;
}

message GetStoragePolicyResponseProto {
    required string storagePolicy = 1;
}

message IndexReportRequestProto {
    repeated uint64 blockIds = 1;
    repeated BlockIndexProto blockIndices = 2;
}

message IndexReportResponseProto {
}

/**
 * cli communication messages
 */
message InodePersistRequestProto {
}

message InodePersistResponseProto {
}
