syntax = 'proto2';

package nahfs;

message BlockMetadata {
    required uint32 version = 1;
    required uint64 blockId = 2;
    required uint64 length = 3;
    optional BlockIndex index = 4;
}

message BlockIndex {
    required uint64 startTimestamp = 2;
    required uint64 endTimestamp = 3;
    repeated GeohashIndex geohashIndices = 4;
}

message GeohashIndex {
    required string geohash = 1;
    required uint32 startIndex = 2;
    required uint32 endIndex = 3;
}

message IndexReportRequest {
    required uint64 blockId = 1;
    repeated BlockIndex indices = 2;
}

message IndexReportResponse {
}

